repair some issue about dark mode system in tailwind 4

--- a/src/index.css
+++ b/src/index.css
@@ -1,1 +1,9 @@
 @import "tailwindcss";
+
+/* فعال‌سازی حالت تاریک کلاس‌محور در نسخه ۴ */
+/* @theme {
+  --font-sans: "Inter", ui-sans-serif, system-ui;
+} */
+
+/* این بخش به تیلویند می‌گوید که اگر کلاس dark وجود داشت، استایل‌ها را اعمال کند */
+@variant dark (&:where(.dark, .dark *));
